// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideBar should render CollapsedSideBar if collapsed is true 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SideBarView
    className="className"
    collapseSideBar={[Function]}
    collapsed={true}
    onCreateClickonCreateClick={[Function]}
    onSearchChange={[Function]}
    searchValue=""
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "collapseSideBar": [Function],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "collapseSideBar": [Function],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`SideBar should render ListContainerView if collapsed is false 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SideBarView
    className="className"
    collapseSideBar={[Function]}
    collapsed={false}
    onCreateClickonCreateClick={[Function]}
    onSearchChange={[Function]}
    searchValue=""
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <SearchBar
          className="searchBar"
          collapseSideBar={[Function]}
          inputValue=""
          onInputChange={[Function]}
/>,
        <Connect(ListContainerView)
          className="verticalTabContainer"
          footerIcon="PENCIL"
          headerIcon="LIST_ICON"
/>,
        <RowComponent
          className="footer"
          headerClass="footerLogo"
          headerIcon="PLUS"
          mainContent="Create List"
          onClick={undefined}
/>,
      ],
      "className": "sideBar className d-flex flex-column align-items-center justify-content-center",
      "onCreateClickonCreateClick": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "className": "searchBar",
          "collapseSideBar": [Function],
          "inputValue": "",
          "onInputChange": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "className": "verticalTabContainer",
          "footerIcon": "PENCIL",
          "headerIcon": "LIST_ICON",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "className": "footer",
          "headerClass": "footerLogo",
          "headerIcon": "PLUS",
          "mainContent": "Create List",
          "onClick": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <SearchBar
            className="searchBar"
            collapseSideBar={[Function]}
            inputValue=""
            onInputChange={[Function]}
/>,
          <Connect(ListContainerView)
            className="verticalTabContainer"
            footerIcon="PENCIL"
            headerIcon="LIST_ICON"
/>,
          <RowComponent
            className="footer"
            headerClass="footerLogo"
            headerIcon="PLUS"
            mainContent="Create List"
            onClick={undefined}
/>,
        ],
        "className": "sideBar className d-flex flex-column align-items-center justify-content-center",
        "onCreateClickonCreateClick": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "className": "searchBar",
            "collapseSideBar": [Function],
            "inputValue": "",
            "onInputChange": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "className": "verticalTabContainer",
            "footerIcon": "PENCIL",
            "headerIcon": "LIST_ICON",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "className": "footer",
            "headerClass": "footerLogo",
            "headerIcon": "PLUS",
            "mainContent": "Create List",
            "onClick": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`SideBar should render RowComponent if collapsed is false 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SideBarView
    className="className"
    collapseSideBar={[Function]}
    collapsed={false}
    onCreateClickonCreateClick={[Function]}
    onSearchChange={[Function]}
    searchValue=""
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <SearchBar
          className="searchBar"
          collapseSideBar={[Function]}
          inputValue=""
          onInputChange={[Function]}
/>,
        <Connect(ListContainerView)
          className="verticalTabContainer"
          footerIcon="PENCIL"
          headerIcon="LIST_ICON"
/>,
        <RowComponent
          className="footer"
          headerClass="footerLogo"
          headerIcon="PLUS"
          mainContent="Create List"
          onClick={undefined}
/>,
      ],
      "className": "sideBar className d-flex flex-column align-items-center justify-content-center",
      "onCreateClickonCreateClick": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "className": "searchBar",
          "collapseSideBar": [Function],
          "inputValue": "",
          "onInputChange": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "className": "verticalTabContainer",
          "footerIcon": "PENCIL",
          "headerIcon": "LIST_ICON",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "className": "footer",
          "headerClass": "footerLogo",
          "headerIcon": "PLUS",
          "mainContent": "Create List",
          "onClick": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <SearchBar
            className="searchBar"
            collapseSideBar={[Function]}
            inputValue=""
            onInputChange={[Function]}
/>,
          <Connect(ListContainerView)
            className="verticalTabContainer"
            footerIcon="PENCIL"
            headerIcon="LIST_ICON"
/>,
          <RowComponent
            className="footer"
            headerClass="footerLogo"
            headerIcon="PLUS"
            mainContent="Create List"
            onClick={undefined}
/>,
        ],
        "className": "sideBar className d-flex flex-column align-items-center justify-content-center",
        "onCreateClickonCreateClick": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "className": "searchBar",
            "collapseSideBar": [Function],
            "inputValue": "",
            "onInputChange": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "className": "verticalTabContainer",
            "footerIcon": "PENCIL",
            "headerIcon": "LIST_ICON",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "className": "footer",
            "headerClass": "footerLogo",
            "headerIcon": "PLUS",
            "mainContent": "Create List",
            "onClick": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`SideBar should render SearchBar if collapsed is false 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SideBarView
    className="className"
    collapseSideBar={[Function]}
    collapsed={false}
    onCreateClickonCreateClick={[Function]}
    onSearchChange={[Function]}
    searchValue=""
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <SearchBar
          className="searchBar"
          collapseSideBar={[Function]}
          inputValue=""
          onInputChange={[Function]}
/>,
        <Connect(ListContainerView)
          className="verticalTabContainer"
          footerIcon="PENCIL"
          headerIcon="LIST_ICON"
/>,
        <RowComponent
          className="footer"
          headerClass="footerLogo"
          headerIcon="PLUS"
          mainContent="Create List"
          onClick={undefined}
/>,
      ],
      "className": "sideBar className d-flex flex-column align-items-center justify-content-center",
      "onCreateClickonCreateClick": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "className": "searchBar",
          "collapseSideBar": [Function],
          "inputValue": "",
          "onInputChange": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "className": "verticalTabContainer",
          "footerIcon": "PENCIL",
          "headerIcon": "LIST_ICON",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "className": "footer",
          "headerClass": "footerLogo",
          "headerIcon": "PLUS",
          "mainContent": "Create List",
          "onClick": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <SearchBar
            className="searchBar"
            collapseSideBar={[Function]}
            inputValue=""
            onInputChange={[Function]}
/>,
          <Connect(ListContainerView)
            className="verticalTabContainer"
            footerIcon="PENCIL"
            headerIcon="LIST_ICON"
/>,
          <RowComponent
            className="footer"
            headerClass="footerLogo"
            headerIcon="PLUS"
            mainContent="Create List"
            onClick={undefined}
/>,
        ],
        "className": "sideBar className d-flex flex-column align-items-center justify-content-center",
        "onCreateClickonCreateClick": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "className": "searchBar",
            "collapseSideBar": [Function],
            "inputValue": "",
            "onInputChange": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "className": "verticalTabContainer",
            "footerIcon": "PENCIL",
            "headerIcon": "LIST_ICON",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "className": "footer",
            "headerClass": "footerLogo",
            "headerIcon": "PLUS",
            "mainContent": "Create List",
            "onClick": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
